Made Reset button conditional and fixed mobile visibility

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -49,7 +49,3 @@ body {
   display: flex;
   flex-direction: column;
 }
-
-.p-button.p-disabled {
-  background-color: grey;
-}
